src/index.css
@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');

@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';

@font-face {
  font-family: 'Chicago';
  src: url('../public/fonts/ChicagoFLF.ttf') format('truetype');
}

@layer components {
  .stripes::before {
    position: absolute;
    content: '';
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background: linear-gradient(
        rgba(18, 16, 16, 0) 50%,
        rgba(0, 0, 0, 0.16) 50%
      ),
      linear-gradient(
        90deg,
        rgba(255, 0, 0, 0.05),
        rgba(0, 255, 0, 0.02),
        rgba(0, 0, 255, 0.05)
      );
    z-index: 70;
    pointer-events: none;
    background-size: 100% 2px, 3px 100%;
  }

  @keyframes crt-effect {
    0% {
      filter: brightness(100%) hue-rotate(0deg);
      -webkit-filter: brightness(100%) hue-rotate(0deg);
    }
    50% {
      filter: brightness(103%) hue-rotate(5deg);
      -webkit-filter: brightness(103%) hue-rotate(5deg);
    }
    100% {
      filter: brightness(100%) hue-rotate(0deg);
      -webkit-filter: brightness(100%) hue-rotate(0deg);
    }
  }

  .crt {
    animation: crt-effect 0.05s infinite;
    -webkit-animation: crt-effect 0.1s infinite;
  }
}

